# blitz_dictation

./: .augment-guidelines  README.md  pyproject.toml
src/smart_dictation/: app.py  audio.py  config.py  hotkeys.py  local_whisper.py  mac_fn_key.py  volume_control.py
